# watermarking-images-for-fun-and-profit

./: README.md
example_govips/: go.mod  go.sum  main.go
example_pillow/: README.md  pyproject.toml
example_pillow/example_pillow/: main.py
example_pyvips/: README.md  pyproject.toml
example_pyvips/example_pyvips/: main.py
