[tool.poetry]
name = "example_pyvips"
version = "0.1.0"
description = ""
authors = ["Theo Bob Massard <tbobm@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvips = {extras = ["binary"], version = "^2.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
